name:            wai-session-maybe
version:         1.0.0
cabal-version:   >= 1.10
license:         OtherLicense
license-file:    COPYING
category:        Web
copyright:       © 2012 Stephen Paul Weber
author:          Stephen Paul Weber <singpolyma@singpolyma.net>
maintainer:      support@digitallyinduced.com
stability:       experimental
tested-with:     GHC == 7.0.3
synopsis:        Flexible session middleware for WAI
homepage:        https://github.com/digitallyinduced/wai-session-maybe
bug-reports:     https://github.com/digitallyinduced/wai-session-maybe/issues
build-type:      Simple
description:
        Provides a generic, cookie-based middleware for sessions that is
        parameterised over the session store, the cookie name, and the
        cookie parameters (such as path, expiry, etc).  Passes a pair of
        functions (lookup key, set key) for the current session through the
        'Vault' in the 'Request'.
        .
        Also provides a simple example session store based on threadsafe
        'IORef's and 'Data.Map'.
        .
        See example/Main.hs in git for example usage.

extra-source-files:
        README

library
        default-language: Haskell2010
        exposed-modules:
                Network.Wai.Session.Maybe,
                Network.Wai.Session.Maybe.Map

        build-depends:
                base == 4.*,
                containers,
                bytestring,
                bytestring-builder,
                entropy,
                transformers,
                time,
                StateVar,
                vault,
                cookie,
                wai >= 2.0.0,
                http-types,
                blaze-builder

source-repository head
        type:     git
        location: https://github.com/digitallyinduced/wai-session-maybe.git
